--- a/src/css/AuthForm.css
+++ b/src/css/AuthForm.css
@@ -9,6 +9,28 @@ body {
     background-color: #f0f0f0;
 }
 
+.background {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+  
+  .blur {
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    filter: blur(1px);
+    z-index: -1;
+  }
+
 .auth-container {
     display: flex;
     overflow: hidden;
@@ -16,8 +38,7 @@ body {
 }
 
 .auth-form-container {
-    width: 100%;
-    padding: 20px;
+    padding: 25px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -25,12 +46,8 @@ body {
     transition: transform 0.3s ease-in-out;
 }
 
-.login-form {
-    transform: translateX(0%);
-}
-
-.register-form {
-    transform: translateX(-100%);
+.auth-form-container h2{
+    font-size: 36px;
 }
 
 .auth-form {
@@ -51,7 +68,7 @@ body {
 
 .form-group input {
     width: 100%;
-    padding: 8px;
+    height: 30px;
     font-size: 14px;
     border: 1px solid #929292;
     border-radius: 4px;
