--- a/src/css/AuthForm.css
+++ b/src/css/AuthForm.css
@@ -35,10 +35,11 @@ body {
     display: flex;
     overflow: hidden;
     position: relative;
+    width: 300px;
 }
 
 .auth-form-container {
-    padding: 25px;
+    width: 100%;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -96,4 +97,19 @@ button:hover {
 
 .link:hover {
     text-decoration: underline;
+}
+
+.errorCont{
+    width: 100%;
+    height: 25px;
+    margin-bottom: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.error-message{
+    color: red;
+    font-size: 14px;
+    font-weight: bold;
 }
