--- a/src/css/AuthForm.css
+++ b/src/css/AuthForm.css
@@ -2,11 +2,6 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f0f0f0;
 }
 
 .background {
@@ -57,6 +52,10 @@ body {
     align-items: center;
 }
 
+.auth-form p{
+    padding: 7.5px;
+}
+
 .form-group {
     margin-bottom: 15px;
 }
@@ -99,9 +98,9 @@ button:hover {
     text-decoration: underline;
 }
 
-.errorCont{
+.messageCont{
     width: 100%;
-    height: 25px;
+    height: 15px;
     margin-bottom: 5px;
     display: flex;
     justify-content: center;
@@ -110,6 +109,11 @@ button:hover {
 
 .error-message{
     color: red;
+    font-size: 14px;
+    font-weight: bold;
+}
+.success-message{
+    color: green;
     font-size: 14px;
     font-weight: bold;
 }
